class Message fonctionnelle (lit, encode, decode, et ecrit le fichier)